add cert rotation to envd

--- a/packages/envd/spec/envd.yaml
+++ b/packages/envd/spec/envd.yaml
@@ -14,7 +14,7 @@ paths:
       responses:
         "204":
           description: The service is healthy
-          
+
   /metrics:
     get:
       summary: Get the stats of the service
@@ -26,8 +26,8 @@ paths:
           description: The resource usage metrics of the service
           content:
             application/json:
-                schema:
-                  $ref: "#/components/schemas/Metrics"
+              schema:
+                $ref: "#/components/schemas/Metrics"
 
   /init:
     post:
@@ -46,6 +46,10 @@ paths:
                 accessToken:
                   type: string
                   description: Access token for secure access to envd service
+                rootCertificate:
+                  type: string
+                  description: Root certificate for mitm proxy
+
       responses:
         "204":
           description: Env vars set, the time and metadata is synced with the host
@@ -239,12 +243,12 @@ components:
           type: string
           description: Type of the file
           enum:
-              - file
+            - file
     EnvVars:
       type: object
       description: Environment variables to set
       additionalProperties:
-          type: string
+        type: string
     Metrics:
       type: object
       description: Resource usage metrics
