include vault metrics

--- a/iac/provider-gcp/nomad/configs/otel-collector.yaml
+++ b/iac/provider-gcp/nomad/configs/otel-collector.yaml
@@ -139,6 +139,7 @@ processors:
           - "orchestrator.*"
           - "template.*"
           - "api.*"
+          - "vault.*"
           - "client_proxy.*"
           - "Click*"
           - "otelcol.*"
